# parking-management-system

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh
cmake/: clang-cxx-dev-tools.cmake
parking-management-client-app/: CMakeLists.txt  main.cc
parking-management-client-app/client/: CMakeLists.txt  client.cc
parking-management-client-app/include/: client.hh
parking-management-server/: CMakeLists.txt  main.cc
parking-management-server/component/: CMakeLists.txt  parking.cc  vehicle.cc
parking-management-server/component/tests/: CMakeLists.txt  component_tests.cc
parking-management-server/include/: parking.hh  parking_manager.hh  utils.hh  vehicle.hh
parking-management-server/services/: CMakeLists.txt  parking_manager.cc
proto/: parking_management.proto
